fixed text color in dark mode for my page

--- a/application/src/main/resources/static/js/react-client/src/pages/reward-screen/style.module.scss
+++ b/application/src/main/resources/static/js/react-client/src/pages/reward-screen/style.module.scss
@@ -6,7 +6,7 @@
   
 .dark {
     background-image: url(../../assets/background/pages-dark-background.png) !important;
-    color: white;
+    color: black;
     background-size: cover;
     min-height: 100vh;
 }
